--- a/AVL-Tree/public/index.html
+++ b/AVL-Tree/public/index.html
@@ -13,9 +13,9 @@
   <body>
     <div class="user-interface">
       <div class="options-header">
-        <h1>Options</h1>
-        <p>Values</p>
-        <div class="onoffswitch">
+       Opciones :
+       
+        <div class="onoffswitch" hidden>
           <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
           <label class="onoffswitch-label" for="myonoffswitch"></label>
         </div>
@@ -24,16 +24,16 @@
       <form class="options">
         <div class="insert-node">
           <input type="text" class="key"  placeholder="Key">
-          <input type="text" class="value" placeholder="Value">
-          <input type="submit" class="insertBtn" value="Insert node">
+          <input type="text" class="value" placeholder="Value" hidden>
+          <input type="submit" class="insertBtn" value="Insertar">
         </div>
         <div class="remove-node">
           <input type="text" class="key" placeholder="Key">
-          <input type="submit" class="removeBtn" value="Remove node">
+          <input type="submit" class="removeBtn" value="Remover">
         </div>
         <div class="find-node">
           <input type="text" class="key" placeholder="Key">
-          <input type="submit" class="findBtn" value="Find node">
+          <input type="submit" class="findBtn" value="Buscar">
         </div>
         <hr />
         <!-- <div class="traverses">
@@ -52,6 +52,9 @@
       <table class="tree-data">
       </table>
     </div>
+    <div id="snackbar">No se encontró el valor ingresado...</div>
+    <div id="snackadd">El valor se ingresó correctamente</div>
+    <div id="snackexist">El valor ya está registrado.</div>
     <script language="javascript" type="text/javascript" src="main.js"></script>
   </body>
 
